--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,14 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+@import "../node_modules/magic.css/dist/magic.min.css";
+
+.activity-modal {
+    display: flex;
+    justify-content: center;
+    --background: transparent; 
+}
+
+ion-button {
+    font-size: 12px;
+}
