--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,7 +84,7 @@
   --fab-button: #009688;
   --dark-tint: #5D746F;
   --warm-orange: #ED7524;
-  --light-tint: #ECEDEF;
+  --light-tint: rgb(255, 255, 255);
   --warm-yellow: #F2C400;
   --text-main-color: #707070;
   --icons-blue: #40E9B1;
