--- a/src/app/components/shop-item-data/shop-item-data.component.scss
+++ b/src/app/components/shop-item-data/shop-item-data.component.scss
@@ -37,7 +37,7 @@
             align-items: center;
         }
         ion-item {
-            --background: #ecedef;
+            --background: var(--light-tint);
         }
     }
     .input-box {
@@ -96,6 +96,6 @@
 
     }
     ion-item {
-        --background: #ecedef;
+        --background: var(--light-tint);
     }
     }
