--- a/src/app/components/user-data-card/user-data-card.component.scss
+++ b/src/app/components/user-data-card/user-data-card.component.scss
@@ -71,6 +71,6 @@
         border: 1px solid #C6C6C6;
     }
     ion-item {
-        --background: #ecedef;
+        --background: var(--light-tint);
     }
 }
