refresher added and package update

--- a/src/app/main/dashboard/tabs/activities-tab/activities-tab.page.html
+++ b/src/app/main/dashboard/tabs/activities-tab/activities-tab.page.html
@@ -10,6 +10,11 @@
 </ion-header>
 
 <ion-content>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content
+        pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles">
+      </ion-refresher-content>
+    </ion-refresher>
   <div *ngIf="!!currentActivities">
     <div *ngFor="let activity of (currentActivities | filter : keyword)">
   <app-activity-card [activity]="activity"></app-activity-card>
