--- a/src/app/main/dashboard/tabs/logs-tab/logs-tab.page.html
+++ b/src/app/main/dashboard/tabs/logs-tab/logs-tab.page.html
@@ -10,12 +10,19 @@
 </ion-header>
 
 <ion-content>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content
+        pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles">
+      </ion-refresher-content>
+    </ion-refresher>
   <div *ngFor="let item of ( logActivities | filter : keyword) | orderBy: 'logTime' : true">
     <app-log-card [activityLog]="item"></app-log-card>
-
   </div>
+
   <div *ngIf="!logActivities || logActivities.length === 0" class="col empty-list">
       <ion-icon name="add-circle-outline" style="font-size: 40px; width: 100%;"></ion-icon>
       <span>No Logged Activities!</span>
     </div>
+
+
 </ion-content>
