prices list added

--- a/src/app/main/account-settings/account-settings.page.html
+++ b/src/app/main/account-settings/account-settings.page.html
@@ -16,7 +16,7 @@
 
   <div class="buttons-list col">
   <ion-button shape="round">Edit Profile</ion-button>
-  <ion-button shape="round">Edit Prices</ion-button>
+  <ion-button shape="round" (click)="navigateTo('menu/prices')">Edit Prices</ion-button>
   <ion-button shape="round" (click)="navigateTo('menu/shop-management')">View and Edit Shop Items</ion-button>
   <ion-button shape="round" (click)="navigateTo('menu/accounts-management')">Accounts Management</ion-button>
   </div>
