--- a/src/app/main/pages/edit-activity/edit-activity.page.html
+++ b/src/app/main/pages/edit-activity/edit-activity.page.html
@@ -36,7 +36,7 @@
   <div class="action-buttons">
       <div class="cancel-button" ><span>Cancel</span></div>
       <div class="action-buttons">
-          <ion-button class="play-button" (click)="submit()" [disabled]="!deviceNo || 2 > pairCount">
+          <ion-button class="play-button" (click)="submit()" [disabled]="!deviceNo || 2 > pairsCount">
             <ion-icon name="play"></ion-icon>
           </ion-button>
   </div>
