--- a/src/app/components/user-data-card/user-data-card.component.html
+++ b/src/app/components/user-data-card/user-data-card.component.html
@@ -43,8 +43,8 @@
 </div>
 
 <div class="row buttons-row">
-  <ion-button shape="round" fill="outline" style="width: 25%" *ngIf="currentState == 'edit'" (click)="updateUser(userData.userData)" >Save</ion-button>
-  <ion-button shape="round" fill="outline" color="danger" style="width: 50%" (click)="resetPassword()" *ngIf="currentState == 'edit'">Reset Password</ion-button>
+  <ion-button shape="round" fill="outline" style="width: 25%" *ngIf="currentState == 'edit'" (click)="updateUser()" >Save</ion-button>
+  <ion-button shape="round" fill="outline" color="danger" style="width: 50%" (click)="resetUserPassword()" *ngIf="currentState == 'edit'">Reset Password</ion-button>
   <ion-button shape="round" fill="outline" color="warning" style="width: 25%" (click)="changeState()" *ngIf="currentState == 'edit'">Cancel</ion-button>
 
   <ion-button shape="round" fill="outline" style="width: 25%" (click)="addUser()" *ngIf="currentState == 'new'">Add</ion-button>
